wrap up styles for v1 of reader, fix minor scrolling issues

--- a/src/styles/menus.less
+++ b/src/styles/menus.less
@@ -18,6 +18,10 @@
     &.active {
       a {
         background: lighten(@tertiaryThemeColor, 10%);
+
+        &:hover {
+          background: lighten(@tertiaryThemeColor, 10%);
+        }
       }
     }
   }
