--- a/src/styles/modal.less
+++ b/src/styles/modal.less
@@ -164,12 +164,10 @@
           float: right;
           display: inline-block;
 
-
           .textSizing {
             border: 1px solid lighten(@tertiaryThemeColor, 20%);
             display: inline-block;
             margin-right: 4px;
-            //padding: 2px;
             background: lighten(@tertiaryThemeColor, 10%);
             border-radius: 4px;
 
@@ -206,8 +204,6 @@
 
       .modal-body {
         clear: both;
-        //height: 100%;
-        //padding-bottom: @footerHeight;
         position: fixed;
         top: calc(@headerHeight + @navHeight);
         bottom: @footerHeight;
@@ -255,7 +251,7 @@
             line-height: normal;
           }
           &.lgFont {
-            font-size: 1.5em;
+            font-size: 1.3em;
             line-height: normal;
           }
         }
